# cdb-aggregator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  retag.yml  tag-items.yml
backend/app/: __init__.py  attestation.py  comparison.py  main.py  verifier.py
backend/app/adapters/: __init__.py  base.py  fdx_bank.py  legacy_bank.py  scraper_bank.py
backend/app/agent/: __init__.py  cash_finder.py
backend/app/alias/: __init__.py  registry.py  resolver.py
backend/app/api/: __init__.py  aggregation.py  demo.py  dto.py  receipts.py  session.py
backend/app/api/routes/: __init__.py  agent.py  aggregation.py  alias.py  attestation.py  comparison.py  consent.py  health.py  receipts.py
backend/app/consent/: __init__.py  audit.py  enforcement.py  minimize.py  reader.py  sqlite_audit.py  store.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  account.py  balance.py  common.py  consent.py  customer.py  holding.py  transaction.py
backend/app/providers/: __init__.py
backend/app/providers/legacy_bank/: README.md  __init__.py  app.py  auth.py  data.py
backend/app/providers/mock_fdx_bank/: README.md  __init__.py  app.py  auth.py  data.py
backend/app/providers/mock_fdx_bank/fdx_schemas/: account.schema.json  customer.schema.json  holding.schema.json  transaction.schema.json
backend/app/providers/scraper_bank/: README.md  __init__.py  app.py  auth.py  data.py
backend/app/security/: __init__.py  pkce.py
backend/tests/: __init__.py  test_adapters.py  test_agent.py  test_api_agent_console.py  test_api_aggregation.py  test_api_alias.py  test_api_audit_chain.py  test_api_consent.py  test_api_receipts.py  test_attestation.py  test_audit.py  test_consent.py  test_coverage.py  test_fdx_conformance.py  test_hardening.py  test_health.py  test_legacy_bank.py  test_mock_fdx_bank.py  test_models.py  test_property.py  test_scraper_bank.py  test_sessions.py  test_sqlite_audit.py  test_static_frontend.py  test_verifier.py
docs/: README.md  THREAT_MODEL.md  blog-post.md  build-todo.md  fdx-conformance.md  polish-todo.md  project-review.md  research-report.md  roadmap.md  screen-scraping.md
docs/adr/: 0001-backend-fastapi.md  0002-fdx-aligned-canonical-model.md  0003-consent-as-a-gate.md  0004-traceability-and-minimization.md  0005-agentic-delegation-as-consent.md  0006-in-memory-stores-and-mocks.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  format.js  main.jsx  styles.css  theme.js
frontend/src/components/: AccountsList.jsx  ActivityFeed.jsx  ActivityLog.jsx  ApprovalQueue.jsx  AssistantChat.jsx  AssistantSuggestion.jsx  AuditTable.jsx  AuthorityCard.jsx  ChainVerifier.jsx  ConfirmButton.jsx  ConnectForm.jsx  ConnectionCard.jsx  DelegationCard.jsx  HowItWorksStrip.jsx  Icon.jsx  NetWorthPanel.jsx  PermissionSimulator.jsx  ReceiptList.jsx  ScopeChip.jsx  ScopePreview.jsx  Sidebar.jsx  Skeleton.jsx  ThemeToggle.jsx  Toaster.jsx  TransactionsFeed.jsx
frontend/src/pages/: AddressPage.jsx  AgentPage.jsx  ComparePage.jsx  ConsentPage.jsx  CredentialsPage.jsx  DashboardPage.jsx  ExplainerPage.jsx  HowItWorksPage.jsx  OverviewPage.jsx  PrinciplesPage.jsx  WhySaferPage.jsx
