[project]
name = "cdb-aggregator"
version = "0.1.0"
description = "FDX-aligned Consumer-Driven Banking aggregator with a first-class consent + traceability layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",  # OAuth2 token endpoint reads form-encoded bodies
    "httpx>=0.27",              # adapters fetch from providers over HTTP
    "beautifulsoup4>=4.12",     # the screen-scraping adapter parses HTML (Item 6)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",      # coverage reporting (CI gate)
    "ruff>=0.4",            # lint + format
]

[tool.pytest.ini_options]
# Make the `app` package importable without installing, and keep tests discoverable.
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]

[tool.coverage.report]
# The CI gate lives in the workflow (--cov-fail-under); these lines never count.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # Protocol / abstractmethod stubs
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
# `app` is this repo's first-party package; group its imports separately.
known-first-party = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
